# msc

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  config.json  configure.sh  declarative_data.json  main  main.py  package-lock.json  rename.py  requirements.txt  setup.py
debug/: coco_obj_det.py  run_placesCNN_basic.py  test_annotation.py  test_img_to_vec.py  test_scene.py  test_segmentation.py
debug/cnn/: simple_cnn.py  test_random.py
media/: alpha.py  exp_a.py  exp_b.py  indoor_rbf_1000_logistic.pkl  nn100.txt  nn1000.txt  nn50.txt  nn500.txt  nn_activation.py  nn_hidden.py  nnlogistic.txt  nnrelu.txt  nntanh.txt  pr_indoor.tex  pr_sun397.tex  rbf_1000.pkl  rbf_1000.txt  rbf_1000_logistic.pkl  rbf_1000_relu.pkl  rbf_1000_sigmoid.pkl  svm.py  svm_kernel.py  svmlinear.txt  svmrbf.txt  svmsigmoid.txt  test_result.py
src/: declarative.py  graph.py  img_to_vec.py  pam.py  spatial.py  sun_obj_annotations.py
test/: run_placesCNN_basic.py  test_annotation.py  test_graph.py  test_img_to_vec.py
tests/: coco_obj_det.py  indoor_obj_annotations.py  pr.py  sun397_open.py  sun_obj_annotations.py
utils/: coco_obj_det.py
